[package]
name = "torrent-rs"
version = "0.1.0"
authors = ["Allan J. <contato.allanj@gmail.com>"]
edition = "2018"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_bencode = "^0.2.0"
failure = "0.1.5"
chrono = { version = "0.4", features = ["serde"] }
sha1 = { version = "0.6.0", features = ["std", "serde"] }
serde_bytes = "0.11"
serde_urlencoded = "0.5.1"
rand = "0.6.5"
reqwest = "0.9.16"
bincode = "1.1.3"
nom = "5.0.0-beta1"
scroll = "0.9.2"
itertools = "0.8"
percent-encoding = "1.0.1"
